debugging chrome mobile spacing issue

--- a/src/Components/City.css
+++ b/src/Components/City.css
@@ -3,8 +3,8 @@
   grid-template: 1fr / 1fr;
   place-items: center;
   max-width: 100%;
-  height: 70vh;
-  height: -webkit-fill-available;
+  max-height: 70vh;
+
   border-radius: 100px 100px 0px 0px;
   overflow: hidden;
   box-shadow: 3px 3px 10px #00000050;
@@ -17,13 +17,13 @@
 
 @media only screen and (min-width: 1023px) {
   .city__container {
-    height: 90vh;
+    max-height: 90vh;
   }
 }
 
 @media only screen and (max-height: 600px) {
   .city__container {
-    height: 70vh;
+    max-height: 70vh;
   }
 }
 
